<?xml version="1.0" encoding="utf-8"?>
    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/materialCardView"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:strokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/presenter_image"
                android:layout_width="130dp"
                android:layout_height="180dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:adjustViewBounds="true"
                android:background="@drawable/imagem_cardview_shape"
                android:contentDescription="@string/foto_do_palestrante"
                android:padding="0dp"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/presenter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_alignParentTop="true"
                android:textStyle="bold"
                android:layout_toEndOf="@id/presenter_image"
                android:text="@string/nome_do_palestrante"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/presenter_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/presenter_name"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@id/presenter_image"
                android:text="@string/empresa_do_palestrante"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/presenter_description"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxLength="150"
                android:layout_below="@id/presenter_company"
                android:textColor="@color/gray_text"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@id/presenter_image"
                android:maxHeight="120dp"
                android:text="@string/descricao_palestrante"/>


        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>